# WeAreVR-IMU

IMU_test_data/: l90r90r90l90.txt  r90l90l90r90.txt  random.txt  random_flat_tilted_start.txt
Jupyter/: Mahony_for_IMU.ipynb  Unwinding.ipynb  difftest.txt  frametest.txt  frametest2.txt  frametest3.txt  frametest4.txt  quaternions_table.csv  stableCam.txt
Jupyter/.ipynb_checkpoints/: Mahony_for_IMU-checkpoint.ipynb  Unwinding-checkpoint.ipynb  temp-checkpoint.ipynb
Jupyter/help/: help.txt
Jupyter/install/: local_setup.sh  setup.sh
Jupyter/log/: latest_build
Jupyter/vdata/: 5rot.mkv.csv  Movie_005.mp4.csv  Movie_008.mp4.csv  static_5rot.mkv.csv  test.mkv.csv  test_10percentquality.mkv.csv
Measurements/: cam.txt  imu_position.csv  imu_position2.csv  imu_position3.csv  imu_position_10.csv  imu_position_11.csv  imu_position_4.csv  imu_position_5.csv  imu_position_6.csv  imu_position_7_fast.csv  imu_position_dev.csv  robot_position.csv  robot_position2.csv  robot_position3.csv  robot_position_10.csv  robot_position_11.csv  robot_position_4.csv  robot_position_5.csv  robot_position_dev.csv
Measurements/IMU_test_data/: 90pu90pd90pd90pu.txt
Old_IMU/IMU/myimu/: CMakeLists.txt  README.md
Old_IMU/IMU/myimu/cmake/: FindFreespace.cmake
Old_IMU/IMU/myimu/src/: myimu.cpp
fsm9/build_dev/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  communication_example  data_rate_example  enable_mouse_example  firmware_version_example  (+6 more)
tf2_workshop/: IMUbroadcaster.py  IMUbroadcaster___.py  Twistbroadcaster.py  publisher.py
(+64 files in other folders)
